--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-starter-aws
   implementation group: 'io.awspring.cloud', name: 'spring-cloud-starter-aws', version: '2.4.2'
 	implementation 'org.apache.poi:poi-ooxml:5.2.5'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
