--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,7 +21,7 @@ spring:
     properties:
       hibernate.format_sql: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 
   servlet:
     # Multipart request 의 업로드 파일 크기 제한 설정
