--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,23 +55,21 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          source: "docker-compose.yml,.env"
-          target: /home/ubuntu/
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: ".env,docker-compose.yml,nginx-spring.conf"
+          target: "/home/ubuntu/TalkToDo"
+          strip_components: 0
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: EC2 에 배포
-        uses: appleboy/ssh-action@v0.1.5
+      - name: EC2 에서 배포 실행
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            cd /home/ubuntu/TalkToDo
+
             # Docker 설치 확인 및 설치
             if ! command -v docker &> /dev/null; then
               echo "🐳 Docker가 설치되어 있지 않습니다. Docker를 설치합니다..."
@@ -106,9 +104,9 @@ jobs:
             sudo docker stop $(sudo docker ps -aq) 2>/dev/null || true
             sudo docker rm $(sudo docker ps -aq) 2>/dev/null || true
 
-            # Docker Compose로 배포
-            sudo /usr/local/bin/docker-compose pull
-            sudo /usr/local/bin/docker-compose up -d
+            # Docker Compose로 배포 (SSL 프로필 포함)
+            sudo /usr/local/bin/docker-compose --profile ssl pull
+            sudo /usr/local/bin/docker-compose --profile ssl up -d
 
             # 배포 후 상태 확인
             echo "🔍 배포 상태 확인 중..."
@@ -124,7 +122,8 @@ jobs:
             sudo docker-compose logs --tail=20
 
             # SSL 인증서 설정 (도메인이 설정된 경우)
-            if [ ! -z "api-talktodo.kro.kr" ]; then
+            DOMAIN="api-talktodo.kro.kr"
+            if [ ! -z "$DOMAIN" ] && [ "$DOMAIN" != "yourdomain.com" ]; then
               echo "🔒 SSL 인증서 설정을 시작합니다..."
               
               # Certbot 설치
@@ -135,12 +134,21 @@ jobs:
               fi
               
               # SSL 인증서 발급
-              sudo certbot certonly --standalone -d api-talktodo.kro.kr --non-interactive --agree-tos --email ${{ secrets.EMAIL }} || echo "SSL 인증서 발급 실패 (도메인 설정 확인 필요)"
+              sudo certbot certonly --standalone -d $DOMAIN --non-interactive --agree-tos --email ${{ secrets.EMAIL }} || echo "SSL 인증서 발급 실패 (도메인 설정 확인 필요)"
               
               # Nginx 설치 및 설정
-              if [ -f "/etc/letsencrypt/live/api-talktodo.kro.kr/fullchain.pem" ]; then
+              if [ -f "/etc/letsencrypt/live/$DOMAIN/fullchain.pem" ]; then
                 echo "✅ SSL 인증서가 발급되었습니다. Nginx를 설정합니다..."
                 sudo apt-get install -y nginx
+                
+                # Nginx 설정 파일 복사
+                sudo cp nginx-spring.conf /etc/nginx/sites-available/talktodo
+                sudo ln -sf /etc/nginx/sites-available/talktodo /etc/nginx/sites-enabled/
+                sudo rm -f /etc/nginx/sites-enabled/default
+                
+                # Nginx 설정 테스트 및 재시작
+                sudo nginx -t && sudo systemctl restart nginx
+                
                 echo "🎉 SSL 설정이 완료되었습니다!"
               fi
             else
