--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,20 @@
 server {
     listen 80;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
 
-    # SSL 인증서 설정
-    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+    # SSL 인증서 설정 (ZeroSSL)
+    ssl_certificate /home/ubuntu/TalkToDo/ssl/certificate.crt;
+    ssl_certificate_key /home/ubuntu/TalkToDo/ssl/private.key;
 
     # SSL 보안 설정
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256;
     ssl_prefer_server_ciphers off;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
@@ -22,7 +22,7 @@ server {
     # HSTS 설정
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 프록시 설정
+    # Spring Boot 애플리케이션으로 프록시
     location / {
         proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
@@ -30,15 +30,41 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # 타임아웃 설정
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 버퍼 설정
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        
         # WebSocket 지원
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
 
+    # API 경로별 설정
+    location /api/ {
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # 정적 파일 캐싱
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        proxy_pass http://localhost:8080;
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+
+    # 헬스 체크
+    location /health {
+        proxy_pass http://localhost:8080/actuator/health;
+        access_log off;
     }
 } 
