--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,37 @@
 server {
     listen 80;
     server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
-    return 301 https://$server_name$request_uri;
+    
+    # HTTP 요청도 직접 처리 (HTTPS 리다이렉트 전에)
+    location / {
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 타임아웃 설정
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 버퍼 설정
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+    }
+    
+    # API 경로별 설정
+    location /api/ {
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # HTTPS로 리다이렉트 (선택사항)
+    # return 301 https://$server_name$request_uri;
 }
 
 server {
