--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,9 @@
+# HTTP 서버 (80 포트)
 server {
-    listen 80;
+    listen 80 default_server;
     server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
     
-    # HTTP 요청도 직접 처리 (HTTPS 리다이렉트 전에)
+    # HTTP 요청 직접 처리
     location / {
         proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
@@ -30,10 +31,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     
-    # HTTPS로 리다이렉트 (선택사항)
-    # return 301 https://$server_name$request_uri;
+    # 헬스 체크
+    location /health {
+        proxy_pass http://localhost:8080/actuator/health;
+        access_log off;
+    }
 }
 
+# HTTPS 서버 (443 포트)
 server {
     listen 443 ssl http2;
     server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
