--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,9 @@ server {
     listen 80 default_server;
     server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
     
+    # 요청 본문 크기 제한 증가 (1024MB)
+    client_max_body_size 1024M;
+    
     # Spring Boot 애플리케이션으로 프록시
     location / {
         proxy_pass http://localhost:8080;
@@ -33,6 +36,9 @@ server {
 server {
     listen 443 ssl http2;
     server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
+
+    # 요청 본문 크기 제한 증가 (1024MB)
+    client_max_body_size 1024M;
 
     # SSL 인증서 설정 (ZeroSSL)
     ssl_certificate /home/ubuntu/TalkToDo/ssl/certificate.crt;
