--- a/nginx.conf
+++ b/nginx.conf
@@ -14,10 +14,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # 타임아웃 설정
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # 타임아웃 설정 (최대값으로 증가)
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 1800s;
+        proxy_read_timeout 1800s;
         
         # 버퍼 설정
         proxy_buffering on;
@@ -62,10 +62,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # 타임아웃 설정
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # 타임아웃 설정 (최대값으로 증가)
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 1800s;
+        proxy_read_timeout 1800s;
         
         # 버퍼 설정
         proxy_buffering on;
