컨피그 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 # HTTP 서버 (80 포트)
 server {
     listen 80 default_server;
-    server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
+    server_name talktodo.kro.kr www.talktodo.kro.kr;
     
     # 요청 본문 크기 제한 증가 (1024MB)
     client_max_body_size 1024M;
@@ -35,7 +35,7 @@ server {
 # HTTPS 서버 (443 포트)
 server {
     listen 443 ssl http2;
-    server_name api-talktodo.kro.kr www.api-talktodo.kro.kr;
+    server_name talktodo.kro.kr www.talktodo.kro.kr;
 
     # 요청 본문 크기 제한 증가 (1024MB)
     client_max_body_size 1024M;
